# benzene-spatial-data-analysis

./: README.md
shared_pipeline_reference/: README.md  pyproject.toml  requirements.txt
shared_pipeline_reference/data/raw/: benzene_monitoring.csv  cancer.csv  rolling_12mo_avg.csv  wind.csv
shared_pipeline_reference/outputs/: area_level_exposure_table.csv  cleaned_monitor_dataset.csv  correlation_table.csv  monitor_summary_table.csv  regression_table.csv  sensitivity_analysis_table.csv
shared_pipeline_reference/src/beaumont_benzene_cancer/: __init__.py  pipeline.py
shared_pipeline_reference/work/cancer/: 2018.csv  2019.csv  2020.csv  2021.csv  2022.csv  2023.csv  Invasive-Cancer-Incidence-Rates-by-County-in-Texas-Leukemia-2018.csv  Invasive-Cancer-Incidence-Rates-by-County-in-Texas-Leukemia-2019.csv  Invasive-Cancer-Incidence-Rates-by-County-in-Texas-Leukemia-2020.csv  Invasive-Cancer-Incidence-Rates-by-County-in-Texas-Leukemia-2021.csv  Invasive-Cancer-Incidence-Rates-by-County-in-Texas-Leukemia-2022.csv  Invasive-Cancer-Incidence-Rates-by-County-in-Texas-Leukemia-2023.csv  Invasive-Cancer-Incidence-Rates-by-County-in-Texas-Myeloma-2018.csv  Invasive-Cancer-Incidence-Rates-by-County-in-Texas-Myeloma-2019.csv  Invasive-Cancer-Incidence-Rates-by-County-in-Texas-Myeloma-2020.csv  Invasive-Cancer-Incidence-Rates-by-County-in-Texas-Myeloma-2021.csv  Invasive-Cancer-Incidence-Rates-by-County-in-Texas-Myeloma-2022.csv  Invasive-Cancer-Incidence-Rates-by-County-in-Texas-Myeloma-2023.csv  cancer.csv  compile_cancer_data.py
shared_pipeline_reference/work/wind/: wind.csv  (+1 more)
(+17 files in other folders)
